Fix: bug with image image from meet up not showing p - incorrect id with extra character, styling meet up element

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -235,24 +235,26 @@ nav ul {
 
 /* meet up element */
 
-#meetup-imaage {
+#meetup-image {
     background-image: url('../images/meetup-image.WebP');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
     height: 600px;
-    width: 100%;
-    /* overflow: hidden; */
+    max-width: 100%;
+    overflow: hidden;
 }
 
-#map-wrapper {
-    float: left
-    bottom: 55px;
-    left: 100px;
+.map-wrapper {
     position: absolute;
+    overflow: hidden;
+    float: left;
+    left: 10%;
+    bottom: 140px
 }
 
 #meetup-text {
+    max-width: 50%;
     float: right;
     text-align: right;
     vertical-align: center;
@@ -260,8 +262,8 @@ nav ul {
     width: 350px;
     height: 300px;
 
-    bottom: 200px;
-    right: 100px;
+    bottom: 180px;
+    right: 10%;
     position: absolute;
 }
 
